--- a/meta/main.yml
+++ b/meta/main.yml
@@ -26,17 +26,17 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-   platforms:
-   - name: CentOS
-     versions:
-     - 7
-     - 8
-   - name: RHEL
-     versions:
-     - 7
-     - 8
-  #   - 7
-  #   - 99.99
+  #  platforms:
+  #  - name: CentOS
+  #    versions:
+  #    - 7
+  #    - 8
+  #  - name: RHEL
+  #    versions:
+  #    - 7
+  #    - 8
+  # #   - 7
+  # #   - 99.99
 
   galaxy_tags: [system, server_configuration]
     # List tags for your role here, one per line. A tag is a keyword that describes
